[gd_scene load_steps=4 format=3 uid="uid://bxypkya62tqlj"]

[ext_resource type="AudioStream" uid="uid://o1f3xb6ngvgo" path="res://src/main/assets/texture/slime/click_sound.wav" id="1_moei8"]
[ext_resource type="Script" path="res://src/main/scene/level/slime/play_btn.gd" id="1_o5elr"]
[ext_resource type="Texture2D" uid="uid://d32lh5tay2io6" path="res://src/main/assets/texture/slime/play.png" id="2_qj3td"]

[node name="PlayBtn" type="Node2D"]
script = ExtResource("1_o5elr")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_moei8")

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2_qj3td")

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
